--- a/SectionC.html
+++ b/SectionC.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="indexstyle.css">
 	<link rel="stylesheet" 
@@ -16,8 +16,7 @@
     <title>Virtual Library Tour</title>
 </head>
 <body>
-	
- 		<div class="header">
+	<div class="header">
  			<img src="PICT-Logo.png" style="width: 100px;height: 100px;background: transparent; position: relative; clear: left; float: right;">
  			<h4><br>Society for Computer Technology and Research's</h4>
  			<h1>Pune Institute Computer Technology</h1>	
@@ -46,23 +45,11 @@
  		</a>
  		</div>
  		</div>
-
+ 		
  	<div class="container">
-
-		<div class="tabsection">
- 			<div class="text-left">
-		<button style="margin-top:-20%;margin-left:-10%;" type="button" class="btn btn-success btn-lg float-left">PG Section</button>
-		</div>
-		<div class="text-center">
-		<button style="margin-top:-12%;margin-left:-50%;" type="button" class="btn btn-success btn-lg float-center">Digital Library</button>
-		</div>
-		<div class="text-center">
-		<button style="margin-top:-1%;margin-left:-20%;" type="button" class="btn btn-success btn-lg float-center">Group Study Area</button>
-		</div>
-		<div class="text-right">
-			<button id="UG" onclick="nextimg()" style="margin-top:-2%;" type="button" class="btn btn-success btn-lg float-right">UG Section</button>
-		</div>
- 		</div>
+ 		<a target="_self" href="Lib1.mp4">
+ 			<img src="SectionC.jpeg" alt="Reading Hall" style="width: 100%;height: 100%;">
+ 		</a>
  	</div>
  	<div class="footer">
  		<img src="i5.png" alt="Facebook" style="width: 50px; height: 50px;">
@@ -88,5 +75,5 @@
 
  		
  	</script>
- </body>
- </html>
+</body>
+</html>
