--- a/index.html
+++ b/index.html
@@ -19,21 +19,13 @@
  	
  		<div class="header">
  			<img src="PICT-Logo.png" style="width: 100px;height: 100px;background: transparent; position: relative; clear: left; float: right;">
- 			<h4><br>Society for Computer Technology and Research's</h4>
- 			<h1>Pune Institute Computer Technology</h1>
- 			
- 			<div class="header">
- 			<div class="sections">
- 				<a target="_self" >
- 				<img src="i2.png" alt="About Library" onclick="myFunc()" class="dropbtn">
- 			
- 					<div id="dd" class="dropcont">
- 					<a href="about.html">Section A</a>
- 					<a href="about.html">Section B</a>
- 					<a href="about.html">Section C</a>
- 					</div>
+ 			<div class="jumbotron text-light" style="background-color: #00a1e3;">
+ 				<h4 class="display-6">Society for Computer Technology and Research's<br></h4>
+  				<h1 class="display-4">Pune Institute Computer Technology</h1>
+  			</div>
+ 				<a target="_self" href="about.html">
+ 				<img src="i2.png" alt="About Library" >
  				</a>
- 			</div>
  				<a target="_self" href="diglib.html" >
  				<img src="i1.png" alt="Digital Library">
  				</a>
@@ -43,7 +35,6 @@
  				<a target="_self" href="stsup.html" >
  				<img src="i4.png" alt="Student Support">
  				</a>
- 			</div>
  		</div>
 <div class="container">
  		<div class="central">
@@ -62,25 +53,6 @@
  		<img src="i6.png" alt="Twitter" style="width: 50px; height: 50px;">
  		<img src="i7.png" alt="YouTube" style="width: 50px; height: 50px;">
  	</div>
-<script>
- 		function myFunc(){
- 			document.getElementById("dd").classList.toggle("show");
- 		} 
- 		window.onclick=function(event){
- 			if (!event.target.matches(".dropbtn")){
- 				var dropdowns = document.getElementsByClassName("dropcont");
- 				var i;
- 				for (i=0; i<dropdowns.length; i++){
- 					var openDropdown = dropdowns[i];
- 					if (openDropdown.classList.contains('show')){
- 						openDropdown.classList.remove('show');
- 					}
- 				}
- 			}
- 		}
-
- 		
- 	</script>
 
 
 </body>   
