--- a/SectionB.html
+++ b/SectionB.html
@@ -51,13 +51,23 @@
   </nav>
 
   <!-- SECTION -->
-  <div class="row justify-content-center">
-    <div class="col-md-4 secBImages align-self-center">
+  <div class="row">
+    <div class="col-md-6 secBImages">
       <div class="thumbnail">
         <a href="#">
-          <img class="secBImgTag img-rounded " src=".\Assets\Images\Sections\Reading Hall\Reading Hall.jpg" alt="Manthan Section" style="width:100%">
+          <img class="secBImgTag img-rounded" src=".\Assets\Images\Sections\Manthan\Manthan_Gate.jpeg" alt="Manthan Section" style="width:100%">
           <div class="caption">
-            <p class="ImgSecP">Reading Hall Section</p>
+            <p class="ImgSecP">Manthan Section</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-6 secBImages">
+      <div class="thumbnail">
+        <a href="/w3images/nature.jpg">
+          <img class="secBImgTag img-rounded" src=".\Assets\Images\Sections\Reference\Reference_Gate.jpeg" alt="Nature" style="width:100%">
+          <div class="caption">
+            <p class="ImgSecP">References Section</p>
           </div>
         </a>
       </div>
