--- a/index.html
+++ b/index.html
@@ -1,59 +1,164 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en" dir="ltr">
+
 <head>
-    <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="indexstyle.css">
-	<link rel="stylesheet" 
-          href= "https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
-
-    <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> 
-  	</script>
-   	<script src= "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"> 
-    </script> 
-    <script src= "https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"> 
-    </script>
-    <title>Virtual Library Tour</title>
+  <meta charset="utf-8">
+  <title>Virtual Library Tour</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href=".\CSS\style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
+
 <body>
- 	
- 		<div class="header">
- 			<img src="PICT-Logo.png" style="width: 100px;height: 100px;background: transparent; position: relative; clear: left; float: right;">
- 			<div class="jumbotron text-light" style="background-color: #00a1e3;">
- 				<h4 class="display-6">Society for Computer Technology and Research's<br></h4>
-  				<h1 class="display-4">Pune Institute Computer Technology</h1>
-  			</div>
- 				<a target="_self" href="about.html">
- 				<img src="i2.png" alt="About Library" >
- 				</a>
- 				<a target="_self" href="diglib.html" >
- 				<img src="i1.png" alt="Digital Library">
- 				</a>
- 				<a target="_self" href="fire.html" >
- 				<img src="i3.png" alt="Find Resources">
- 				</a>
- 				<a target="_self" href="stsup.html" >
- 				<img src="i4.png" alt="Student Support">
- 				</a>
- 		</div>
-<div class="container">
- 		<div class="central">
- 			<h2>Virtual Library Tour</h2><br>
-      <video preload="" autoplay=""><source src="Lib1.mp4" type="video/mp4">"Welcome to Central Library"</video>
- 			<p>
- 				Library of PICT is well known everywhere forits richest sources of information. The library is committed to respond to the needs of users by providing well organised and up-to-date collection. All the books in the library are arranged by Dewey Decimal Classification. It offers various services to the users. Library has a very spacious Reading Hall with very good infrastructure which is quite confortable and conducive to reading and learning
- 			</p> 
- 			
- 			
- 		</div>
+  <!-- Header -->
+  <div class="container-fluid header">
+    <div class="row">
+      <div class="col-lg-2 header-logo">
+        <a href="https://pict.edu/"><img src=".\Assets\Images\Logo\PICT_Logo.png" alt="PICT Logo"></a>
+      </div>
+      <div class="col-lg-10 header-text">
+        <p class="header-para">Society for Computer Technology and Research's</p>
+        <h1 class="header-h1"><strong>Pune Institute Computer Technology</strong></h1>
+      </div>
+    </div>
+  </div>
 
- 	</div>
- 	<div class="footer">
- 		<img src="i5.png" alt="Facebook" style="width: 50px; height: 50px;">
- 		<img src="i6.png" alt="Twitter" style="width: 50px; height: 50px;">
- 		<img src="i7.png" alt="YouTube" style="width: 50px; height: 50px;">
- 	</div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="https://pict.edu/">
+          <p class="navbar-header-link"><strong>PICT</strong></p>
+        </a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href=".\index.html">Home</a></li>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">PICT Central Library <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Section A</a></li>
+            <li><a href="SectionB.html">Section B</a></li>
+            <li><a href="SectionC.html">Section C</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Digital Library</a></li>
+        <li><a href="#">Find Resources</a></li>
+        <li><a href="#">Central Library</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Carousel -->
+  <div class="container Carousel-container">
+    <h2 class="Carousel-h2">PICT Library</h2>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+
+        <div class="item active">
+          <img src=".\Assets\Images\Sections\Magazine\Magazine.jpg" alt="Magazine Section" style="width:100%;">
+          <div class="carousel-caption">
+            <h3>Magazine Section</h3>
+            <p>A2 - Building, Ground Floor</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src=".\Assets\Images\Sections\Magazine\Magazine2.jpg" alt="Magazine Section" style="width:100%;">
+          <div class="carousel-caption">
+            <h3>Magazine Section</h3>
+            <p>A2 - Building, Ground Floor</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src=".\Assets\Images\Sections\Desk\Desk.jpg" alt="Desk Section" style="width:100%;">
+          <div class="carousel-caption">
+            <h3>Desk Section</h3>
+            <p>A2 - Building, Ground Floor</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src=".\Assets\Images\Sections\Reading Hall\Reading Hall.jpg" alt="Reading Hall Section" style="width:100%;">
+          <div class="carousel-caption">
+            <h3>Reading Hall Section</h3>
+            <p>A2 - Building, First Floor Through Central Library</p>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+  <!-- FOOTER -->
+  <footer class="footersec section footer-classic context-dark bg-image" style="background: #2d3246;">
+    <div class="container">
+      <div class="row row-30">
+        <div class="col-md-4 col-xl-5">
+          <div class="pr-xl-4"><a class="brand" href="index.html"><img class="brand-logo-light " src=".\Assets\Images\Logo\PICT_Logo.png" alt="PICT Logo" width="70" height="70" srcset=".\Assets\Images\Logo\PICT_Logo.png 2x"></a>
+            <p>We are an award-winning Engineering College, dedicated to the best result in research, placements, academics.</p>
+            <!-- Rights-->
+            <!-- <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved.</span></p> -->
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h5>Contacts</h5>
+          <dl class="contact-list">
+            <dt>Address:</dt>
+            <dd>PICT, Dhankawadi, Pune</dd>
+          </dl>
+          <dl class="contact-list">
+            <dt>email:</dt>
+            <dd><a href="mailto:#">pict@pict.edu</a></dd>
+          </dl>
+          <dl class="contact-list">
+            <dt>phones:</dt>
+            <dd><a href="tel:#">pict.edu</a> <span>or</span> <a href="tel:#">pict-contact</a>
+            </dd>
+          </dl>
+        </div>
+        <div class="col-md-4 col-xl-3">
+          <h5>Links</h5>
+          <ul class="nav-list">
+            <li><a href="#">PICT</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Central Library</a></li>
+            <li><a href="#">Digital Library</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row no-gutters social-container">
+      <div class="col-md-3"><a class="social-inner" href="#"><i class="fab fa-facebook"></i><span>Facebook</span></a></div>
+      <div class="col-md-3"><a class="social-inner" href="#"><i class="fab fa-instagram"></i><span>Instagram</span></a></div>
+      <div class="col-md-3"><a class="social-inner" href="#"><i class="fab fa-twitter-square"></i><span>Twitter</span></a></div>
+      <div class="col-md-3"><a class="social-inner" href="#"><i class="fab fa-youtube-square"></i><span>Youtube</span></a></div>
+    </div>
+  </footer>
 
 
-</body>   
+</body>
+
 </html>
