--- a/SectionB.html
+++ b/SectionB.html
@@ -38,9 +38,9 @@
         <li><a href=".\index.html">Home</a></li>
         <li class="dropdown active"><a class="dropdown-toggle" data-toggle="dropdown" href="#">PICT Central Library <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Section A</a></li>
+            <li><a href="SectionA.html">Section A</a></li>
             <li><a href="#">Section B</a></li>
-            <li><a href="#">Section C</a></li>
+            <li><a href="SectionC.html">Section C</a></li>
           </ul>
         </li>
         <li><a href="#">Digital Library</a></li>
