--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="active"><a href=".\index.html">Home</a></li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">PICT Central Library <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Section A</a></li>
+            <li><a href="SectionA.html">Section A</a></li>
             <li><a href="SectionB.html">Section B</a></li>
             <li><a href="SectionC.html">Section C</a></li>
           </ul>
