--- a/ManthanSection.html
+++ b/ManthanSection.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
   <link rel="stylesheet" href=".\CSS\style.css">
+  <link rel="stylesheet" href=".\CSS\Sections.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
@@ -19,20 +20,20 @@
 
 <body>
   <!-- Header -->
-  	<div class="container-fluid header">
-    	<div class="row">
-      		<div class="col-lg-2 header-logo">
-        	<a href="https://pict.edu/"><img src=".\Assets\Images\Logo\PICT_Logo.png" alt="PICT Logo"></a>
-      		</div>
-      		<div class="col-lg-10 header-text">
-        		<p class="header-para">Society for Computer Technology and Research's</p>
-        		<h1 class="header-h1"><strong>Pune Institute Computer Technology</strong></h1>
-      		</div>
-    	</div>
-  	</div>
+  <div class="container-fluid header">
+    <div class="row">
+      <div class="col-lg-2 header-logo">
+        <a href="https://pict.edu/"><img src=".\Assets\Images\Logo\PICT_Logo.png" alt="PICT Logo"></a>
+      </div>
+      <div class="col-lg-10 header-text">
+        <p class="header-para">Society for Computer Technology and Research's</p>
+        <h1 class="header-h1"><strong>Pune Institute Computer Technology</strong></h1>
+      </div>
+    </div>
+  </div>
 
   <!-- Navbar -->
-<div class="container-fluid navbarContainerFluid">
+  <div class="container-fluid navbarContainerFluid">
 
     <nav class="navbar navbar-expand-lg navbar-dark navbarContainer">
     <li class="nav-item navBarItem dropdown">
@@ -83,7 +84,7 @@
       <span>Reading Hall: 8am to 10pm</span><br>
       <span>(extended during examination)</span>
     </div>
-    <div  id="recommend" style="margin-left: -6%;">
+    <div  id="recommend">
       <h2>Recommended reading</h2><br>
       <span>List of topics to select from as shown below </span><br>
       <input type="checkbox" id="ai_and_ml" name="ai_ml">
@@ -119,71 +120,38 @@
       </ol>
     </div>
   </div>
-
-  <!-- Carousel -->
-  <div class="col-xl-5 container Carousel-container">
-    <h2 class="Carousel-h2">PICT Library</h2>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-
-        <div class="item active">
-          <img src=".\Assets\Images\Sections\Periodical\Magazine.jpg" alt="Magazine Section" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Magazine Section</h3>
-            <p>A2 - Building, Ground Floor</p>
-          </div>
+  <!-- SECTION -->
+  <div class="col-xl-5 container-fluid ManthanSectionContainer">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <a href="ManthanSectionPersonalityDevelopment.html">
+            <img class="ManthanSectionImgTag img-rounded" src=".\Assets\Images\Sections\Manthan\PersonalityDevelopment.jpeg" alt="Personality Development" style="width:100%">
+            <div class="caption">
+              <p class="ImgSecP">Personality Development</p>
+            </div>
+          </a>
         </div>
-
-        <div class="item">
-          <img src=".\Assets\Images\Sections\Periodical\Magazine2.jpg" alt="Magazine Section" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Magazine Section</h3>
-            <p>A2 - Building, Ground Floor</p>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src=".\Assets\Images\Sections\Book Issue\Book Issue Counter.jpg" alt="Book Issue" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Desk Section</h3>
-            <p>A2 - Building, Ground Floor</p>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src=".\Assets\Images\Sections\Reading Hall\Reading Hall.jpg" alt="Reading Hall Section" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Reading Hall Section</h3>
-            <p>A2 - Building, First Floor Through Central Library</p>
-          </div>
-        </div>
-
       </div>
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <div class="col-md-1"></div>
+      <div class="col-md-4">
+        <div class="thumbnail">
+          <a href="ManthanSectionSoftSkill.html">
+            <img class="ManthanSectionImgTag img-rounded" src=".\Assets\Images\Sections\Manthan\SoftSkills.jpeg" alt="Soft Skills" style="width:100%">
+            <div class="caption">
+              <p class="ImgSecP">Soft Skills</p>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
+
   </div>
 
 
 
-	<!-- Right Pane -->
+  <!-- Right Pane -->
   <div class="col-md-2" id="right-pane">
       <div class="row" id="newarrivals">
         <h2>New Arrivals</h2>
@@ -216,24 +184,6 @@
     </div>
 </div>
 
-
-  <!-- CONTENT -->
-  <!--div class="container-fluid totalLibraryContent">
-    <div class="container libraryContent">
-      <p class="contentText">Hello everyone!<br /><br />
-        You are most welcome to PICT Central Library!!<br /><br />
-        In this Virtual Tour you will find the features of the library, its resources, Digital Library, its services and facilities and the most important thing is its easy access to users.
-      </p>
-    </div>
-  </div>
-
-  <div class="container-fluid totalLibraryContent2">
-    <div class="container libraryContent2">
-      <p class="contentText">&nbsp;&nbsp;&nbsp;&nbsp;Central Library of PICT is known everywhere for its richest sources of information. It is said to be one of the best libraries in the region.<br><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;It provides the required support to the Academic & Research activities. The Library is committed to respond to the needs of users by providing the right information at the right time.
-      </p>
-    </div>
-  </div-->
   
 
   <!-- FOOTER -->
@@ -285,9 +235,5 @@
 
 
 </body>
-
-<script src=".\Script\navbarScript.js"></script>
-
-</script>
 
 </html>
