--- a/DigitalLibrarySection.html
+++ b/DigitalLibrarySection.html
@@ -42,15 +42,24 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item dropdown-toggle" href="DigitalLibrarySection.html"> Digital Library </a>
                 <ul class="submenu dropdown-menu">
-                      <li><a class="dropdown-item" href="">E-Resources</a></li>
-                      <li><a class="dropdown-item" href="">E-Journals</a></li>
-                      <li><a class="dropdown-item" href="">E-Books</a></li>
-                      <li><a class="dropdown-item" href="">Video Lectures</a></li>
-                      <li><a class="dropdown-item" href="">Institutional Repository</a></li>
+                      <li>E-Journals
+                        <ul class="submenu dropdown-menu">
+                          <li><a class="dropdown-item" href="https://ieeexplore.ieee.org/Xplore/home.jsp">IEEE</a></li>
+                          <li><a class="dropdown-item" href="https://link.springer.com/">Springer</a></li>
+                        </ul>
+                      </li>
+                      <li>E-Journals
+                        <ul class="submenu dropdown-menu">
+                          <li><a class="dropdown-item" href="https://ieeexplore.ieee.org/Xplore/home.jsp">PACKT</a></li>
+                          <li><a class="dropdown-item" href="https://link.springer.com/">Springer</a></li>
+                        </ul>
+                      </li>
+                      <li><a class="dropdown-item" href="https://swayam.gov.in/">Video Lectures</a></li>
+                      <li><a class="dropdown-item" href="https://10.10.15.220:8080/library/browse.jsp">Institutional Repository</a></li>
                   </ul>
                 </li>
                 <li><a class="dropdown-item" href="ServicesAndFacilities.html"> Services And Facilities </a></li>
-                <li><a class="dropdown-item dropdown-toggle" href="DigitalLibrarySection.html"> Tour of Library </a>
+                <li><a class="dropdown-item dropdown-toggle" href="LibTour.html"> Tour of Library </a>
                 <ul class="submenu dropdown-menu">
                       <li><a class="dropdown-item" href="PropertySection.html"> Property Section </a></li>
                       <li><a class="dropdown-item" href="StackAreaSection.html"> Stack Area </a></li>
