--- a/ManthanSectionPersonalityDevelopment.html
+++ b/ManthanSectionPersonalityDevelopment.html
@@ -41,11 +41,20 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item dropdown-toggle" href="DigitalLibrarySection.html"> Digital Library </a>
                 <ul class="submenu dropdown-menu">
-                      <li><a class="dropdown-item" href="">E-Resources</a></li>
-                      <li><a class="dropdown-item" href="">E-Journals</a></li>
-                      <li><a class="dropdown-item" href="">E-Books</a></li>
-                      <li><a class="dropdown-item" href="">Video Lectures</a></li>
-                      <li><a class="dropdown-item" href="">Institutional Repository</a></li>
+                      <li>E-Journals
+                        <ul class="submenu dropdown-menu">
+                          <li><a class="dropdown-item" href="https://ieeexplore.ieee.org/Xplore/home.jsp">IEEE</a></li>
+                          <li><a class="dropdown-item" href="https://link.springer.com/">Springer</a></li>
+                        </ul>
+                      </li>
+                      <li>E-Journals
+                        <ul class="submenu dropdown-menu">
+                          <li><a class="dropdown-item" href="https://ieeexplore.ieee.org/Xplore/home.jsp">PACKT</a></li>
+                          <li><a class="dropdown-item" href="https://link.springer.com/">Springer</a></li>
+                        </ul>
+                      </li>
+                      <li><a class="dropdown-item" href="https://swayam.gov.in/">Video Lectures</a></li>
+                      <li><a class="dropdown-item" href="https://10.10.15.220:8080/library/browse.jsp">Institutional Repository</a></li>
                   </ul>
                 </li>
                 <li><a class="dropdown-item" href="ServicesAndFacilities.html"> Services And Facilities </a></li>
@@ -120,18 +129,20 @@
       </ol>
     </div>
   </div>
+
   <!-- VIDEO PLAYER AND INFO -->
-  <div class="col-xl-5 container VideoPlayerAndInfoContainer">
+  <div class="col-md-5 container VideoPlayerAndInfoContainer">
     <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-4 videoPlayerText">
-        <h1 class="videoPlayerH1">Personality Development</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="videoPlayerText">
+        <h1 class="videoPlayerH1">Manthan Section</h1>
+        <ul>
+          <li><a href="StackAreaSection.html">Stack Section</a></li>
+          <li><a href="GroupStudySection.html">Group Study Area</a></li>
+          <li><a href="#">Manthan Section</a></li>
+        </ul>
       </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-5">
-        <video width="400" controls>
+      <div class="row">
+        <video width="500" controls>
           <source src="mov_bbb.mp4" type="video/mp4">
           <source src="mov_bbb.ogg" type="video/ogg">
           Your browser does not support HTML5 video.
