--- a/index.html
+++ b/index.html
@@ -40,15 +40,24 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item dropdown-toggle" href="DigitalLibrarySection.html"> Digital Library </a>
                 <ul class="submenu dropdown-menu">
-                      <li><a class="dropdown-item" href="">E-Resources</a></li>
-                      <li><a class="dropdown-item" href="">E-Journals</a></li>
-                      <li><a class="dropdown-item" href="">E-Books</a></li>
-                      <li><a class="dropdown-item" href="">Video Lectures</a></li>
-                      <li><a class="dropdown-item" href="">Institutional Repository</a></li>
+                      <li>E-Journals
+                        <ul class="submenu dropdown-menu">
+                          <li><a class="dropdown-item" href="https://ieeexplore.ieee.org/Xplore/home.jsp">IEEE</a></li>
+                          <li><a class="dropdown-item" href="https://link.springer.com/">Springer</a></li>
+                        </ul>
+                      </li>
+                      <li>E-Journals
+                        <ul class="submenu dropdown-menu">
+                          <li><a class="dropdown-item" href="https://ieeexplore.ieee.org/Xplore/home.jsp">PACKT</a></li>
+                          <li><a class="dropdown-item" href="https://link.springer.com/">Springer</a></li>
+                        </ul>
+                      </li>
+                      <li><a class="dropdown-item" href="https://swayam.gov.in/">Video Lectures</a></li>
+                      <li><a class="dropdown-item" href="https://10.10.15.220:8080/library/browse.jsp">Institutional Repository</a></li>
                   </ul>
                 </li>
                 <li><a class="dropdown-item" href="ServicesAndFacilities.html"> Services And Facilities </a></li>
-                <li><a class="dropdown-item dropdown-toggle" href="DigitalLibrarySection.html"> Tour of Library </a>
+                <li><a class="dropdown-item dropdown-toggle" href="LibTour.html"> Tour of Library </a>
                 <ul class="submenu dropdown-menu">
                       <li><a class="dropdown-item" href="PropertySection.html"> Property Section </a></li>
                       <li><a class="dropdown-item" href="StackAreaSection.html"> Stack Area </a></li>
@@ -121,7 +130,8 @@
   </div>
 
   <!-- Carousel -->
-  <div class="col-xl-5 container Carousel-container">
+  <div class="col-xl-7"> 
+  <div class="container Carousel-container">
     <h2 class="Carousel-h2">PICT Library</h2>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
@@ -180,6 +190,32 @@
       </a>
     </div>
   </div>
+
+  <!--Testimonials-->
+    <div class="row" id="testimonials">
+      <div class="card-group">
+        <div class="card">
+          <img src=".\Assets\Images\Testinomials\frame.jpg" class="card-img-top" alt="Card 1">
+          <div class="card-body">
+            <p class="card-text">Review 1.</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src=".\Assets\Images\Testinomials\frame.jpg" class="card-img-top" alt="Card 2">
+          <div class="card-body">
+            <p class="card-text">Review 2.</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src=".\Assets\Images\Testinomials\frame.jpg" class="card-img-top" alt="Card 3">
+          <div class="card-body">
+            <p class="card-text">Review 3.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
 
