--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           </div>
         </div>
 
-        <div class="gy-5 book-transaction text-align-center" style="background-image: url('./Assets/Images/Background/BTF.png'); background-size: 100% 100%">
+        <div class="gy-5 book-transaction text-align-center" style="background-image: url('./Assets/Images/Background/bookTransaction.jpg'); background-size: 100% 100%">
           <br><h3><u><strong>Book Transaction Process</strong></u></h3>
           <br><h3><a href="BookTransactionFlowChart.html" style="color: blue; text-decoration: underline; font-weight: bold;"> Click here to view </a></h3>
         </div>
