--- a/VLTTabs.html
+++ b/VLTTabs.html
@@ -103,10 +103,10 @@
       <li><a href="#/twelve">Feedback</a></li>
     </ul>
 
-    <div id="content">
+    <div class="container" id="content">
       <!-- <p id="one"> -->
       <div id="one" class="embed-responsive embed-responsive-16by9 tabsSection">
-        <iframe class="embed-responsive-item tabsSection" src="https://drive.google.com/file/d/18hy7AY4de_HuTHc9vsuMVopC9zvBVUIA/preview" width="640" height="480"></iframe>
+        <iframe class="embed-responsive-item tabsSection"  src="https://drive.google.com/file/d/18hy7AY4de_HuTHc9vsuMVopC9zvBVUIA/preview" width="75%" height="50%"></iframe>
         
         <!-- <p>
           HOME SECTION
@@ -114,7 +114,7 @@
       </div>
 
       <div id="two" class="embed-responsive embed-responsive-16by9 tabsSection">
-        <iframe class="embed-responsive-item tabsSection" src="https://drive.google.com/file/d/1lfQMGen31GCgfNtD8O9u_toZ-wZOJEPp/preview" width="75%" height="50%" ></iframe>
+        <iframe class="embed-responsive-item tabsSection"  src="https://drive.google.com/file/d/1lfQMGen31GCgfNtD8O9u_toZ-wZOJEPp/preview" width="75%" height="50%" ></iframe>
         <!-- <p>
           PROPERTY SECTION
         </p> -->
