--- a/VLTTabs.html
+++ b/VLTTabs.html
@@ -79,7 +79,7 @@
             </ul>
           </li>
           <li><a class="dropdown-item" href="./ServicesAndFacilities.html"> Services And Facilities </a></li>
-          <li><a class="dropdown-item" href="./About.html" data-toggle="dropdown"> About </a>
+          <li><a class="dropdown-item" href="./About.html"> About </a>
           </li>
         </ul>
       </li>
