--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
   <div class="navbarContainerFluid">
     <nav class="navbar navbar-expand navbar-dark navbarContainer">
       <li class="nav-item navBarItem dropdown">
-        <a class="nav-link dropdown-toggle NavTextColor" href="#" data-toggle="dropdown"> Library </a>
+        <a class="dropdown-toggle NavTextColor" href="#" data-toggle="dropdown"> Library </a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#"> Central Library </a>
           <li><a class="dropdown-item dropdown-toggle" href="#"> Digital Library </a>
             <ul class="submenu dropdown-menu">
               <li class="dropdown-item dropdown-toggle">E-Journals
@@ -75,7 +74,7 @@
             </ul>
           </li>
           <li><a class="dropdown-item" href="./ServicesAndFacilities.html"> Services And Facilities </a></li>
-          <li><a class="dropdown-item" href="./About.html" data-toggle="dropdown"> About </a>
+          <li><a class="dropdown-item" href="./About.html"> About </a>
           </li>
         </ul>
       </li>
@@ -138,6 +137,7 @@
             <li>Coursera - BAI</li>
             <li>Big Data University</li>
           </ol>
+          <br><br>
         </div>
       </div>
 
@@ -203,17 +203,18 @@
           </div>
         </div>
 
-        <div class="gy-5 book-transaction text-align-center" style="background-image: url('./Assets/Images/Background/bookTransaction.jpg'); background-size: 100% 100%">
-          <br><h3><u><strong>Book Transaction Process</strong></u></h3>
-          <br><h3><a href="BookTransactionFlowChart.html" style="color: blue; text-decoration: underline; font-weight: bold;"> Click here to view </a></h3>
-        </div>
+        <div class="book-transaction text-align-center border-rounded" style="background-color:white;">
+              <img src="./Assets/Images/Background/WhatsApp Image 2021-06-13 at 12.57.01.jpeg" style="float: left;">
+              <h1><u><strong>Book Transaction Process</strong></u></h1><br><br>
+              <h3><a href="BookTransactionFlowChart.html" style="color: blue; text-decoration: underline; font-weight: bold;"> Click here to view </a></h3>
+        </div><br>
 
         <div class="feedback" style="padding-bottom: 5px;">
-          <h3 style="color: black"><u><strong>Feedback</strong></u></h3>
+          <h1 style="color: black"><u><strong>Feedback</strong></u></h1>
           <!-- <img src="./Assets/Images/Sections/Feedback.png"> -->
           <div class="row">
             <div class="col">
-              <div class="card border border-6 border-warning" >
+              <div class="card border border-6 border-warning border-rounded" >
                 <div class="card-body">
                   <p class="card-text">The PICT Library has got<br> all the books that we<br> need be it from curriculum <br>or out of curriculum books.</p>
                   <br><footer class="blockquote-footer">Abhishek Choudhari</footer>
@@ -291,7 +292,7 @@
         </div>
       </div>
     </div>
-  </div>
+  
 
 
 
@@ -349,49 +350,50 @@
 
 
   <!-- FOOTER -->
-  <footer class="footersec section footer-classic context-dark bg-image" style="background: #2d3246;">
-    <div class="container">
-      <div class="row row-30">
-        <div class="col-4 col-xl-5">
-          <div class="pr-xl-4"><a class="brand" href="https://pict.edu/"><img class="brand-logo-light " src=".\Assets\Images\Logo\PICT_Logo.png" alt="PICT Logo" width="70" height="70" srcset=".\Assets\Images\Logo\PICT_Logo.png 2x"></a>
-            <p>We are an award-winning Engineering College, dedicated to the best result in research, placements, academics.</p>
-            <!-- Rights-->
-            <!-- <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved.</span></p> -->
+    <footer class="footersec section footer-classic context-dark bg-image" style="background: #2d3246;">
+      <div class="container">
+        <div class="row row-30">
+          <div class="col-4 col-xl-5">
+            <div class="pr-xl-4"><a class="brand" href="https://pict.edu/"><img class="brand-logo-light " src=".\Assets\Images\Logo\PICT_Logo.png" alt="PICT Logo" width="70" height="70" srcset=".\Assets\Images\Logo\PICT_Logo.png 2x"></a>
+              <p>We are an award-winning Engineering College, dedicated to the best result in research, placements, academics.</p>
+              <!-- Rights-->
+              <!-- <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved.</span></p> -->
+            </div>
+          </div>
+          <div class="col-4">
+            <h5>Contacts</h5>
+            <dl class="contact-list">
+              <dt>Address:</dt>
+              <dd>PICT, Dhankawadi, Pune</dd>
+            </dl>
+            <dl class="contact-list">
+              <dt>email:</dt>
+              <dd><a href="mailto:#">pict@pict.edu</a></dd>
+            </dl>
+            <dl class="contact-list">
+              <dt>phones:</dt>
+              <dd><a href="tel:#">pict.edu</a> <span>or</span> <a href="tel:#">pict-contact</a>
+              </dd>
+            </dl>
+          </div>
+          <div class="col-4 col-xl-3">
+            <h5>Links</h5>
+            <ul class="nav-list">
+              <li><a href="https://pict.edu/">PICT</a></li>
+              <li><a href="#">Central Library</a></li>
+              <li><a href="#">Digital Library </a></li>
+              <li><a href="https://pict.edu/about-us/contact-us/">Contact Us</a></li>
+            </ul>
           </div>
         </div>
-        <div class="col-4">
-          <h5>Contacts</h5>
-          <dl class="contact-list">
-            <dt>Address:</dt>
-            <dd>PICT, Dhankawadi, Pune</dd>
-          </dl>
-          <dl class="contact-list">
-            <dt>email:</dt>
-            <dd><a href="mailto:#">pict@pict.edu</a></dd>
-          </dl>
-          <dl class="contact-list">
-            <dt>phones:</dt>
-            <dd><a href="tel:#">pict.edu</a> <span>or</span> <a href="tel:#">pict-contact</a>
-            </dd>
-          </dl>
-        </div>
-        <div class="col-4 col-xl-3">
-          <h5>Links</h5>
-          <ul class="nav-list">
-            <li><a href="https://pict.edu/">PICT</a></li>
-            <li><a href="#">Central Library</a></li>
-            <li><a href="#">Digital Library </a></li>
-            <li><a href="https://pict.edu/about-us/contact-us/">Contact Us</a></li>
-          </ul>
-        </div>
       </div>
-    </div>
-    <div class="row no-gutters social-container">
-      <div class="col-4"><a class="social-inner" href="https://www.facebook.com/Pune-Institute-of-Computer-Technology-109446777102259"><i class="fab fa-facebook"></i><span>Facebook</span></a></div>
-      <div class="col-4"><a class="social-inner" href="https://twitter.com/PunePict"><i class="fab fa-twitter-square"></i><span>Twitter</span></a></div>
-      <div class="col-4"><a class="social-inner" href="https://www.youtube.com/watch?v=dHdafJcQiEY"><i class="fab fa-youtube-square"></i><span>Youtube</span></a></div>
-    </div>
-  </footer>
+      <div class="row no-gutters social-container">
+        <div class="col-4"><a class="social-inner" href="https://www.facebook.com/Pune-Institute-of-Computer-Technology-109446777102259"><i class="fab fa-facebook"></i><span>Facebook</span></a></div>
+        <div class="col-4"><a class="social-inner" href="https://twitter.com/PunePict"><i class="fab fa-twitter-square"></i><span>Twitter</span></a></div>
+        <div class="col-4"><a class="social-inner" href="https://www.youtube.com/watch?v=dHdafJcQiEY"><i class="fab fa-youtube-square"></i><span>Youtube</span></a></div>
+      </div>
+    </footer>
+</div>
 
 
 </body>
